--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -2,13 +2,13 @@
   <h2>New Recipe</h2>
   <%= form_with model:Recipe do |f| %>
     <%= f.label :name%><br>
-    <%= f.text_field :name, placeholder: 'Name', value: ''%><br>
+    <%= f.text_field :name, placeholder: 'Name', value: '', required: true%><br>
     <%= f.label :preparation_time%><br>
-    <%= f.number_field :preparation_time, placeholder: 'Preparation Time'%><br>
+    <%= f.number_field :preparation_time, placeholder: 'Preparation Time', required: true%><br>
     <%= f.label :cooking_time%><br>
-    <%= f.number_field :cooking_time, placeholder: 'Cooking Time'%><br>
+    <%= f.number_field :cooking_time, placeholder: 'Cooking Time', required: true%><br>
     <%= f.label :description%><br>
-    <%= f.text_area :description, placeholder: 'Description'%><br>
+    <%= f.text_area :description, placeholder: 'Description', required: true%><br>
     <%= f.label :public%><br>
     <%= f.check_box :public, {}, true, false%><br>
     <%= f.submit "Create Recipe"%>
