--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,1 +1,9 @@
-<h1>Details</h1>
+<section>
+  <h2><%=@recipe.name%></h2>
+  <div>
+    <p>Preparation time: <%=@recipe.preparation_time%> minutes</p>
+    <p><%=@recipe.public ? 'Public' : 'Not Public'%></p>
+    <p>Cooking time: <%=@recipe.cooking_time%> minutes</p>
+  </div>
+  <p><%=@recipe.description%></p>
+</section>
