Add button to add ingredient to recipe show view

--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -12,7 +12,7 @@
   </div>
 
   <div>
-    <%= form.label :price, style: "display: block" %>
+    <%= form.label "Unit price", style: "display: block" %>
     <%= form.text_field :price, required: true, class: "form-input" %>
   </div>
 
