--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
 <% if current_user %>
 <%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo: false } %>
 <%= link_to "Home" , root_path %>
+<%= link_to "Recipes" , recipes_path %>
 <%end%>
