--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,4 @@
 <section>
   <button><%=link_to "New Recipe", new_recipe_path %></button>
-  <%= render 'shared/recipe_card'%>
+  <%= render 'recipe_card'%>
 </section>
