--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -7,7 +7,7 @@
           <th>Name</th>
           <th>Measurment Unit</th>
           <th>Unit Price</th>
-          <th>Quantiy</th>
+          <th>Quantity</th>
           <th>Actions</th>
         </tr>
       </thead>
