Add food table to recipe show

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -12,6 +12,20 @@
   </div>
   <p><%=@recipe.description%></p>
   <div>
+    <button><%=link_to "Generate Shopping List", recipe_path(@recipe.id) %></button>
     <button><%=link_to "Add ingredient", new_food_path %></button>
   </div>
+  <table class="table">
+      <thead>
+        <tr>
+          <th>Food</th>
+          <th>Quantity</th>
+          <th>Value</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <%= render 'ingredient'%>
+      </tbody>
+  </table>
 </section>
