--- a/app/views/recipes/_ingredient.html.erb
+++ b/app/views/recipes/_ingredient.html.erb
@@ -1,12 +1,16 @@
 <% @foods.each do |food| %>
-<tr>
+  <%food.recipe_foods.where(recipe_id: @recipe.id).each do |recipe_food|%>
+      <tr>
             <td><%= food.name %></td>
-            <td><%= food.quantity %></td>
-            <td><%= food.price %></td>
+            <td><%= recipe_food.nil? ? 0 : recipe_food.quantity%></td>
+            <td><%= food.price * (recipe_food.nil? ? 0 : recipe_food.quantity) %></td>
             <td>
-              <%= link_to "Remove", food_path(food),
+              <%if recipe_food%>
+              <%= link_to "Remove", recipe_recipe_food_path(@recipe, recipe_food),
               data: { turbo_method: :delete, turbo_confirm: "Are you  sure?"}
               %>
+              <%end%>
             </td>
-</tr>
+      </tr>
+  <% end %>
 <% end %>
