--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,4 +2,5 @@
 <%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo: false } %>
 <%= link_to "Home" , root_path %>
 <%= link_to "Recipes" , recipes_path %>
+<%= link_to "Public Recipes" , public_recipes_path %>
 <%end%>
