Allow only current user to change the recipe

--- a/app/views/public_recipes/index.html.erb
+++ b/app/views/public_recipes/index.html.erb
@@ -1,9 +1,11 @@
 <%@recipes.each do |recipe|%>
   <article>
+    <%=link_to recipe_path(id: recipe.id) do%>
     <div>
       <h2><%=recipe.name%></h2>
       <h3>By: <%=recipe.user.name%></h3>
     </div>
+    <%end%>
     <div>
       <p>Total food items: <%=recipe.recipe_foods.length%></p>
       <%total_price = 0%>
