--- a/app/views/recipes/_ingredient.html.erb
+++ b/app/views/recipes/_ingredient.html.erb
@@ -5,10 +5,14 @@
             <td><%= recipe_food.nil? ? 0 : recipe_food.quantity%></td>
             <td><%= food.price * (recipe_food.nil? ? 0 : recipe_food.quantity) %></td>
             <td>
-              <%if recipe_food%>
-              <%= link_to "Remove", recipe_recipe_food_path(@recipe, recipe_food),
-              data: { turbo_method: :delete, turbo_confirm: "Are you  sure?"}
-              %>
+              <% if can? :update, @recipe%>
+                <%if recipe_food%>
+                  <%= link_to "Remove", recipe_recipe_food_path(@recipe, recipe_food),
+                  data: { turbo_method: :delete, turbo_confirm: "Are you  sure?"}
+                  %>
+                <%end%>
+              <%else%>
+                <p>No actions allowed</p>
               <%end%>
             </td>
       </tr>
