--- a/app/views/general_shopping_list/index.html.erb
+++ b/app/views/general_shopping_list/index.html.erb
@@ -1,10 +1,9 @@
 <h1>Shopping List<h1>
-<% if can? :manage, @recipe %>
-  <% if @missing_ingredients.count == 0 %>
+  <% if @foods.length == 0 %>
     <h2>There are no missing ingredients that must be purchased.</h2>
   <% else %>
-    <h2>Amount of ingredients need to buy <%= @missing_ingredients.count %></h2>
-    <h2>Total value of foods neded <%= @total_price %></h2>
+    <h2>Amount of ingredients need to buy <%= @missing_ingredients.length %></h2>
+    <h2>Total value of foods neded <%= @total_price %> $</h2>
     <table class="table">
       <thead>
         <tr>
@@ -19,4 +18,3 @@
         <% end %>
       </tbody>
   <% end %>
-<% end %>
