--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,8 @@
 <section>
   <button><%=link_to "New Recipe", new_recipe_path %></button>
-  <%= render 'recipe_card'%>
+  <% if @recipes.count > 0%>
+    <%= render 'recipe_card'%>
+  <% else %>
+    <h2>There are no recipes yet</h2>
+  <% end %>
 </section>
