Improve the view

--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div>
-    <%= form.label :measurement_unit, style: "display: block" %>
+    <%= form.label "Measurment Unit(g, kg, l, ml)", style: "display: block" %>
     <%= form.text_field :measurement_unit, required: true, class: "form-input" %>
   </div>
 
