--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,26 @@
  *= require_tree .
  *= require_self
  */
+.button {
+  border: none;
+  display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  border-radius: 4px;
+  color: #fff;
+  background: #69f;
+}
+
+a {
+  color: #69f;
+  text-decoration: none;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 .public {
   position: relative;
