--- a/app/assets/stylesheets/recipes.css
+++ b/app/assets/stylesheets/recipes.css
@@ -33,3 +33,20 @@
   border-radius: 15px;
   background-color: #fff;
 }
+
+.recipes_index {
+  margin: 3rem 1rem;
+  align-items: center;
+  gap: 2rem;
+}
+
+.recipe_card {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  width: 100%;
+  max-width: 60rem;
+  border: 1px solid #000;
+  padding: 1rem;
+  align-items: center;
+  border-radius: 0.5rem;
+}
