--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,8 +1,8 @@
 <section class='recipes_index flex_column'>
-  <button><%=link_to "New Recipe", new_recipe_path %></button>
   <% if @recipes.count > 0%>
     <%= render 'recipe_card'%>
   <% else %>
     <h2>There are no recipes yet</h2>
   <% end %>
+  <%=link_to "New Recipe", new_recipe_path, class: "button" %>
 </section>
