--- a/app/views/recipes/_ingredient.html.erb
+++ b/app/views/recipes/_ingredient.html.erb
@@ -7,7 +7,7 @@
             <td>
               <% if can? :update, @recipe%>
                 <%if recipe_food%>
-                  <%= link_to "Remove", recipe_recipe_food_path(@recipe, recipe_food),
+                  <%= link_to "Remove", recipe_recipe_food_path(@recipe, recipe_food), class: "delete",
                   data: { turbo_method: :delete, turbo_confirm: "Are you  sure?"}
                   %>
                 <%end%>
