--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,17 +1,27 @@
-<section>
+<section class='recipe_new flex_column'>
   <h2>New Recipe</h2>
-  <%= form_with model:Recipe do |f| %>
+  <%= form_with model:Recipe, class: 'flex_column' do |f| %>
     <%= render "shared/error_form_message", resource: @recipe %>
+    <div class="field">
     <%= f.label :name%><br>
     <%= f.text_field :name, placeholder: 'Name', value: '', required: true%><br>
+    </div>
+    <div class="field">
     <%= f.label :preparation_time%><br>
     <%= f.number_field :preparation_time, placeholder: 'Preparation Time', required: true%><br>
+    </div>
+    <div class="field">
     <%= f.label :cooking_time%><br>
     <%= f.number_field :cooking_time, placeholder: 'Cooking Time', required: true%><br>
+    </div>
+    <div class="field">
     <%= f.label :description%><br>
     <%= f.text_area :description, placeholder: 'Description', required: true%><br>
-    <%= f.label :public%><br>
+    </div>
+    <div class="field-check">
+    <%= f.label :public%>
     <%= f.check_box :public, {}, true, false%><br>
-    <%= f.submit "Create Recipe"%>
+    </div>
+    <%= f.submit "Create Recipe", class: "button"%>
   <%end%>
 </section>
