Add title to recipes

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,5 @@
 <section class='recipes_index flex_column'>
+  <h2>Recipes</h2>
   <% if @recipes.count > 0%>
     <%= render 'recipe_card'%>
   <% else %>
