Style general shopping list table

--- a/app/views/general_shopping_list/index.html.erb
+++ b/app/views/general_shopping_list/index.html.erb
@@ -1,9 +1,12 @@
-<h1>Shopping List<h1>
+<section class='general_shopping_list flex_column'>
+<h1>Shopping List</h1>
   <% if @foods.length == 0 %>
-    <h2>There are no missing ingredients that must be purchased.</h2>
+    <h2>There are no missing ingredients that must be purchased</h2>
   <% else %>
-    <h2>Amount of ingredients need to buy <%= @missing_ingredients.length %></h2>
-    <h2>Total value of foods neded <%= @total_price %> $</h2>
+    <div>
+      <h2>Amount of ingredients need to buy: <%= @missing_ingredients.length %></h2>
+      <h2>Total value of foods neded: <%= @total_price %> $</h2>
+    </div>
     <table class="table">
       <thead>
         <tr>
@@ -18,3 +21,4 @@
         <% end %>
       </tbody>
   <% end %>
+</section>
