Style new food page

--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,4 +1,4 @@
-<div class = "form">
+<section class = "recipe_new flex_column">
 <h1>New food</h1>
 
 <%= render "form", food: @food %>
@@ -8,4 +8,4 @@
 <div>
   <%= link_to "Back to foods", foods_path %>
 </div>
-</div>
+</section>
