--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,5 +1,6 @@
+<section class='foods_index flex_column'>
   <h1>Foods</h1>
-  <div class="add-food"><%= link_to "Add food", new_food_path%>
+  <div class="add-food flex_column"><%= link_to "Add food", new_food_path, class:"button"%>
   <% if @foods.count > 0%>
     <table class="table">
       <thead>
@@ -19,4 +20,5 @@
     <%else%>
       <h2>No foods</h2>
   <%end%>
-</div>
+  </div>
+</section>
