--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -4,7 +4,7 @@
             <td><%= food.price %></td>
             <td><%= food.quantity %></td>
             <td>
-              <%= link_to "Delete", food_path(food),
+              <%= link_to "Delete", food_path(food), class: "delete",
               data: { turbo_method: :delete, turbo_confirm: "Are you  sure?"}
               %>
             </td>
