--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,20 @@
  *= require_tree .
  *= require_self
  */
+
+ body{
+  background-image: url(bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+}
+
+.notice {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: 2rem;
+}
 .button {
   border: none;
   display: inline-block;
@@ -21,6 +35,7 @@
   border-radius: 4px;
   color: #fff;
   background: #69f;
+  cursor: pointer;
 }
 
 a {
@@ -50,6 +65,14 @@ a:hover {
 .table {
   width: 100%;
   border-collapse: collapse;
+  color: #000;
+  background-color: #ffffffd7;
+  
+}
+
+article{
+  color: #000;
+  background-color: #ffffffd7;
 }
 
 .table th,
