--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,16 @@
 <% if current_user %>
-<%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo: false } %>
-<%= link_to "Home" , root_path %>
-<%= link_to "Recipes" , recipes_path %>
-<%= link_to "Public Recipes" , public_recipes_path %>
+  <nav>
+    <div class="nav_links">
+      <%= link_to "Home" , root_path %>
+    </div>
+    <div class="nav_links">
+      <%= link_to "Recipes" , recipes_path %>
+    </div>
+    <div class="nav_links">
+      <%= link_to "Public Recipes" , public_recipes_path %>
+    </div>
+    <div class="nav_links">
+      <%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo: false }, class: "logout_button"  %>
+    </div>
+  </nav>
 <%end%>
