Add and modify views

--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -1,7 +1,7 @@
 <tr>
             <td><%= food.name %></td>
             <td><%= food.measurement_unit %></td>
-            <td><%= food.price %></td>
+            <td>$ <%= food.price %></td>
             <td><%= food.quantity %></td>
             <td>
               <%= link_to "Delete", food_path(food), class: "delete",
