--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,11 @@
   </head>
 
   <body>
+  <section class='notice'>
     <p style="color: green" class="notice"><%= notice %></p> 
-    <p style="color: green" class="alert"><%= alert %></p>
-    <%= render 'layouts/header'%>
+    <p style="color: red" class="alert"><%= alert %></p>
+  <%= render 'layouts/header'%>
+  </section>   
     <%= yield %>
     <%= render 'layouts/footer'%>
   </body>
