--- a/app/views/general_shopping_list/_shopping_list.html.erb
+++ b/app/views/general_shopping_list/_shopping_list.html.erb
@@ -1,5 +1,5 @@
  <tr>
     <td><%= ingredient[:name] %></td>
     <td><%= ingredient[:quantity] %> <%=ingredient[:unit]%></td>
-    <td><%= ingredient[:price] %></td>
+    <td>$ <%= ingredient[:price] %></td>
   </tr>
