--- a/app/views/recipes/_ingredient.html.erb
+++ b/app/views/recipes/_ingredient.html.erb
@@ -3,7 +3,7 @@
       <tr>
             <td><%= food.name %></td>
             <td><%= recipe_food.nil? ? 0 : recipe_food.quantity%></td>
-            <td><%= food.price * (recipe_food.nil? ? 0 : recipe_food.quantity) %></td>
+            <td>$ <%= food.price * (recipe_food.nil? ? 0 : recipe_food.quantity) %></td>
             <td>
               <% if can? :update, @recipe%>
                 <%if recipe_food%>
