Fix style lint error

--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -14,7 +14,7 @@ nav {
 /* nav bar links */
 
 nav a {
-  color: #ffffff;
+  color: #fff;
   background-color: rgba(62, 165, 2, 0.76);
   padding: 0.9rem;
   text-decoration: none;
